--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id='root'>Hello from HTML</div>
-    <script src='bundle.js'></script>
+    <script src='public/bundle.js'></script>
   </body>
 </html>
